# Cliptimizer

./: .gitignore  CMakeLists.txt  Cliptimizer.rc  README.md  stdafx.h
forms/: cliptimizer.qrc  cliptimizer.ui  trimdialog.ui
src/: RangeSlider.cpp  RangeSlider.h  cliptimizer.cpp  cliptimizer.h  main.cpp  trimdialog.cpp  trimdialog.h  utils.h  videodisplay.cpp  videodisplay.h
